<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center">

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/loginEditText"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/login"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/passwordEditText"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/tokenEditText"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/token"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />

        <Button
            android:id="@+id/registerButton"
            style="@style/buttonStyle"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up" />




</LinearLayout>