<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/loginButton"
        style="@style/buttonStyle"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.064" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/loginEditText"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/passwordEditText"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/loginQuestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_question" />

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/registration"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>